fixed text alignment and translate (#818)

--- a/src/app/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
+++ b/src/app/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
@@ -109,6 +109,7 @@ $secondErrorColor: #b42626;
 
       .change {
         width: 191px;
+        display: flex;
       }
 
       input {
